updating index.html and assets folder

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                   <a href="#work">Work</a>
+                   <a href="#work">My Work</a>
                 </li>
                 <li>
                     <a href="#contact-me">Contact Me</a>
@@ -29,9 +29,11 @@
             </ul>
         </nav>
     </header>
+
     <div class='image' alt="image of katie looking over water">
         <p>Northwestern University Bootcamp Work</p>
     </div>
+
     <main>
         <section class='content one' id='about-me'>
             <h2>About Me</h2>
@@ -41,8 +43,21 @@
         <section class='content two' id='work'>
             <h2>Work</h2>
             <div class='workcontent subcontent'>
+                <div class='button'>
+                    <a class='worktitle' href="https://kashelton17.github.io/01-hw-html-css/" target='_blank'>First Homework Assignment</a>
+                    <!-- <img class='imagec' id='workimg1' src='./assets/images/homework1.jpg' alt='image of horiseon website'/> --> -->
+                </div>
+            </div>
+            <div class='workcontent subcontent'>
                 <div>
                     <a href="https://kashelton17.github.io/01-hw-html-css/" target='_blank'>First Homework Assignment</a>
+                    <!-- <img class='imagec' src='./assets/images/homework1.jpg' alt='image of horiseon website'/> -->
+                </div>
+            </div>
+            <div class='workcontent subcontent'>
+                <div>
+                    <a href="https://kashelton17.github.io/01-hw-html-css/" target='_blank'>First Homework Assignment</a>
+                    <!-- <img class='imagec' src='./assets/images/homework1.jpg' alt='image of horiseon website'/> -->
                 </div>
             </div>
         </section>
