updating content in index.html and assets folder

--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
     <link rel="stylesheet" type="text/css" href="./assets/reset.css" />
     <link rel="stylesheet" type="text/css" href="./assets/style.css" /> 
 </head>
+
 <body>
     <header>
         <h1>SHELTON</h1>
         <nav>
             <ul>
-                <li>
+                <li class='nav about'>
                     <a href="#about-me">About Me</a>
                 </li>
-                <li>
+                <li class='nav mywork'>
                    <a href="#work">My Work</a>
                 </li>
-                <li>
+                <li class='nav contactMe'>
                     <a href="#contact-me">Contact Me</a>
                 </li>
-                <li>
+                <li class='nav res'>
                    <a href="./assets/images/KatieSheltonResume.pdf" target='_blank'>Resume</a> 
                 </li>
             </ul>
@@ -64,13 +65,13 @@
         <section class='content three' id='contact-me'>
             <h2>Contact Me</h2>
             <ul class='subcontent'>
-                <li class='subcontent'>Email:
+                <li class='contact email'>
                     <a href="mailto: kashelton17@gmail.com" target="_blank"> kashelton17@gmail.com</a>
                 </li>
-                <li class='subcontent'>Phone:
+                <li class='contact tel' >
                     <a href="tel:2245653235"> 224-565-3235</a>
                 </li>
-                <li class='subcontent'>Github:
+                <li class='contact git'>
                     <a href="github.com/kashelton17" target='_blank'>kashelton17</a>
                 </li>
             </ul>
