Updating index.html code and css stylesheet

--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Katie's Portfolio</title>
+    <!-- Adding a favicon -->
     <link rel="shortcut icon" href="./assets/images/k_image.jpg" type="image/x-icon">  
+    <!-- adding a reset stylesheet to reset browser default sytling -->
     <link rel="stylesheet" type="text/css" href="./assets/reset.css" />
+    <!-- linking the css stylesheet  -->
     <link rel="stylesheet" type="text/css" href="./assets/style.css" /> 
 </head>
 
+<!-- Creating the body of teh webpage which contains all the content -->
 <body>
+    <!-- Header section containing name and nav bar -->
     <header>
         <h1>SHELTON</h1>
         <nav>
@@ -31,16 +36,20 @@
         </nav>
     </header>
 
+    <!-- Adding an image of me as well as a subtitle -->
     <div class='image' alt="image of katie looking over water">
         <p>Northwestern University Bootcamp Work</p>
     </div>
 
+    <!-- main contains the content of this page including 'About me', 'Work' and 'Contact' section of the page -->
     <main>
+        <!-- about me section -->
         <section class='content one' id='about-me'>
             <h2>About Me</h2>
             <p class='subcontent'>I grew up in Chicago until I went off to college in 2012. I went to Bucknell University and graduated with a degree in Chemistry and German. Now I live in New Hampshire working as a chemist.
             </p>
         </section>
+        <!-- work section containing links to my work (will update as I create more work) -->
         <section class='content two' id='work'>
             <h2>Work</h2>
             <div class='workcontent subcontent'>
@@ -62,6 +71,7 @@
                 </div>
             </div>
         </section>
+        <!-- contact section containing contact info -->
         <section class='content three' id='contact-me'>
             <h2>Contact Me</h2>
             <ul class='subcontent'>
