Updating media queries for workcontent

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <!-- work section containing links to my work (will update as I create more work) -->
         <section class='content two' id='work'>
             <h2>Work</h2>
-            <div class='workcontent subcontent'>
+            <div class='workcontent subcontent workone'>
                 <div class='button'>
                     <a class='worktitle' href="https://kashelton17.github.io/01-hw-html-css/" target='_blank'>First Homework Assignment</a>
                     <!-- <img class='imagec' id='workimg1' src='./assets/images/homework1.jpg' alt='image of horiseon website'/> --> -->
