Updating index.html code and css stylesheet

--- a/index.html
+++ b/index.html
@@ -87,5 +87,7 @@
             </ul>
         </section>
     </main>
+
+    <footer class='content footer'>Made by Katie Shelton</footer>
 </body>
 </html>
